[gd_scene load_steps=5 format=3 uid="uid://bm1qrpmpbx6vv"]

[ext_resource type="Script" path="res://main.gd" id="1_mouyh"]
[ext_resource type="LabelSettings" uid="uid://0qsj81xam846" path="res://resources/labelsettings_title.tres" id="2_stj2e"]

[sub_resource type="LabelSettings" id="LabelSettings_53881"]
font_size = 20
font_color = Color(1, 1, 0.560784, 1)

[sub_resource type="LabelSettings" id="LabelSettings_alfy0"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mouyh")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.98
grow_horizontal = 2
grow_vertical = 2

[node name="TitleContainer" type="HBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="AppTitle" type="Label" parent="MainContainer/TitleContainer"]
layout_mode = 2
text = "文物图像信息增强系统"
label_settings = ExtResource("2_stj2e")

[node name="ServerStatus" type="Label" parent="MainContainer/TitleContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "正在检查后端状态"

[node name="BodyContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="VBoxContainer" parent="MainContainer/BodyContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="MainContainer/BodyContainer/PanelContainer"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2

[node name="ImportButton" type="Button" parent="MainContainer/BodyContainer/PanelContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "导入图片"

[node name="ServerAddress" type="TextEdit" parent="MainContainer/BodyContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "http://127.0.0.1:27015"

[node name="MethodDarkContainer" type="VBoxContainer" parent="MainContainer/BodyContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Title" type="Label" parent="MainContainer/BodyContainer/PanelContainer/MethodDarkContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 0
text = "暗原色方法"
label_settings = SubResource("LabelSettings_53881")
vertical_alignment = 1

[node name="ParamContainer1" type="VBoxContainer" parent="MainContainer/BodyContainer/PanelContainer/MethodDarkContainer"]
layout_mode = 2

[node name="LabelContainer" type="HBoxContainer" parent="MainContainer/BodyContainer/PanelContainer/MethodDarkContainer/ParamContainer1"]
layout_mode = 2

[node name="TitleParam" type="Label" parent="MainContainer/BodyContainer/PanelContainer/MethodDarkContainer/ParamContainer1/LabelContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "w"
label_settings = SubResource("LabelSettings_alfy0")
vertical_alignment = 1

[node name="ValueParam" type="Label" parent="MainContainer/BodyContainer/PanelContainer/MethodDarkContainer/ParamContainer1/LabelContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "[Value]"
label_settings = SubResource("LabelSettings_alfy0")
vertical_alignment = 1

[node name="SliderParam" type="HSlider" parent="MainContainer/BodyContainer/PanelContainer/MethodDarkContainer/ParamContainer1"]
layout_mode = 2
min_value = 0.1
max_value = 1.0
step = 0.01
value = 0.98

[node name="ParamContainer2" type="VBoxContainer" parent="MainContainer/BodyContainer/PanelContainer/MethodDarkContainer"]
layout_mode = 2

[node name="LabelContainer" type="HBoxContainer" parent="MainContainer/BodyContainer/PanelContainer/MethodDarkContainer/ParamContainer2"]
layout_mode = 2

[node name="TitleParam" type="Label" parent="MainContainer/BodyContainer/PanelContainer/MethodDarkContainer/ParamContainer2/LabelContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "r"
label_settings = SubResource("LabelSettings_alfy0")
vertical_alignment = 1

[node name="ValueParam" type="Label" parent="MainContainer/BodyContainer/PanelContainer/MethodDarkContainer/ParamContainer2/LabelContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "[Value]"
label_settings = SubResource("LabelSettings_alfy0")
vertical_alignment = 1

[node name="SliderParam" type="HSlider" parent="MainContainer/BodyContainer/PanelContainer/MethodDarkContainer/ParamContainer2"]
layout_mode = 2
max_value = 200.0
value = 150.0

[node name="ParamContainer3" type="VBoxContainer" parent="MainContainer/BodyContainer/PanelContainer/MethodDarkContainer"]
layout_mode = 2

[node name="LabelContainer" type="HBoxContainer" parent="MainContainer/BodyContainer/PanelContainer/MethodDarkContainer/ParamContainer3"]
layout_mode = 2

[node name="TitleParam" type="Label" parent="MainContainer/BodyContainer/PanelContainer/MethodDarkContainer/ParamContainer3/LabelContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "maxV1"
label_settings = SubResource("LabelSettings_alfy0")
vertical_alignment = 1

[node name="ValueParam" type="Label" parent="MainContainer/BodyContainer/PanelContainer/MethodDarkContainer/ParamContainer3/LabelContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "[Value]"
label_settings = SubResource("LabelSettings_alfy0")
vertical_alignment = 1

[node name="SliderParam" type="HSlider" parent="MainContainer/BodyContainer/PanelContainer/MethodDarkContainer/ParamContainer3"]
layout_mode = 2
min_value = 0.1
max_value = 1.0
step = 0.1
value = 0.8

[node name="MethodRetinexContainer" type="VBoxContainer" parent="MainContainer/BodyContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Title" type="Label" parent="MainContainer/BodyContainer/PanelContainer/MethodRetinexContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 0
text = "Retinex方法"
label_settings = SubResource("LabelSettings_53881")
vertical_alignment = 1

[node name="ParamContainer1" type="VBoxContainer" parent="MainContainer/BodyContainer/PanelContainer/MethodRetinexContainer"]
layout_mode = 2

[node name="LabelContainer" type="HBoxContainer" parent="MainContainer/BodyContainer/PanelContainer/MethodRetinexContainer/ParamContainer1"]
layout_mode = 2

[node name="TitleParam" type="Label" parent="MainContainer/BodyContainer/PanelContainer/MethodRetinexContainer/ParamContainer1/LabelContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "sigma[0]"
label_settings = SubResource("LabelSettings_alfy0")
vertical_alignment = 1

[node name="ValueParam" type="Label" parent="MainContainer/BodyContainer/PanelContainer/MethodRetinexContainer/ParamContainer1/LabelContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "[Value]"
label_settings = SubResource("LabelSettings_alfy0")
vertical_alignment = 1

[node name="SliderParam" type="HSlider" parent="MainContainer/BodyContainer/PanelContainer/MethodRetinexContainer/ParamContainer1"]
layout_mode = 2
min_value = 1.0
max_value = 255.0
value = 15.0

[node name="ParamContainer2" type="VBoxContainer" parent="MainContainer/BodyContainer/PanelContainer/MethodRetinexContainer"]
layout_mode = 2

[node name="LabelContainer" type="HBoxContainer" parent="MainContainer/BodyContainer/PanelContainer/MethodRetinexContainer/ParamContainer2"]
layout_mode = 2

[node name="TitleParam" type="Label" parent="MainContainer/BodyContainer/PanelContainer/MethodRetinexContainer/ParamContainer2/LabelContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "sigma[1]"
label_settings = SubResource("LabelSettings_alfy0")
vertical_alignment = 1

[node name="ValueParam" type="Label" parent="MainContainer/BodyContainer/PanelContainer/MethodRetinexContainer/ParamContainer2/LabelContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "[Value]"
label_settings = SubResource("LabelSettings_alfy0")
vertical_alignment = 1

[node name="SliderParam" type="HSlider" parent="MainContainer/BodyContainer/PanelContainer/MethodRetinexContainer/ParamContainer2"]
layout_mode = 2
min_value = 1.0
max_value = 255.0
value = 80.0

[node name="ParamContainer3" type="VBoxContainer" parent="MainContainer/BodyContainer/PanelContainer/MethodRetinexContainer"]
layout_mode = 2

[node name="LabelContainer" type="HBoxContainer" parent="MainContainer/BodyContainer/PanelContainer/MethodRetinexContainer/ParamContainer3"]
layout_mode = 2

[node name="TitleParam" type="Label" parent="MainContainer/BodyContainer/PanelContainer/MethodRetinexContainer/ParamContainer3/LabelContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "sigma[2]"
label_settings = SubResource("LabelSettings_alfy0")
vertical_alignment = 1

[node name="ValueParam" type="Label" parent="MainContainer/BodyContainer/PanelContainer/MethodRetinexContainer/ParamContainer3/LabelContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "[Value]"
label_settings = SubResource("LabelSettings_alfy0")
vertical_alignment = 1

[node name="SliderParam" type="HSlider" parent="MainContainer/BodyContainer/PanelContainer/MethodRetinexContainer/ParamContainer3"]
layout_mode = 2
min_value = 1.0
max_value = 255.0
value = 200.0

[node name="ImageContainer" type="ScrollContainer" parent="MainContainer/BodyContainer"]
layout_mode = 2
size_flags_horizontal = 3
vertical_scroll_mode = 0

[node name="ImageList" type="HBoxContainer" parent="MainContainer/BodyContainer/ImageContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="MainContainer/BodyContainer/PanelContainer/ButtonContainer/ImportButton" to="." method="_on_import_button_pressed"]
[connection signal="value_changed" from="MainContainer/BodyContainer/PanelContainer/MethodDarkContainer/ParamContainer1/SliderParam" to="." method="_on_param_value_changed"]
[connection signal="value_changed" from="MainContainer/BodyContainer/PanelContainer/MethodDarkContainer/ParamContainer2/SliderParam" to="." method="_on_param_value_changed"]
[connection signal="value_changed" from="MainContainer/BodyContainer/PanelContainer/MethodDarkContainer/ParamContainer3/SliderParam" to="." method="_on_param_value_changed"]
[connection signal="value_changed" from="MainContainer/BodyContainer/PanelContainer/MethodRetinexContainer/ParamContainer1/SliderParam" to="." method="_on_param_value_changed"]
[connection signal="value_changed" from="MainContainer/BodyContainer/PanelContainer/MethodRetinexContainer/ParamContainer2/SliderParam" to="." method="_on_param_value_changed"]
[connection signal="value_changed" from="MainContainer/BodyContainer/PanelContainer/MethodRetinexContainer/ParamContainer3/SliderParam" to="." method="_on_param_value_changed"]
